# m_02_12

./: .gitignore  LICENSE  README.md  alembic.ini  auth_service.py  main.py  pyproject.toml
repository/: contacts.py  users.py
routes/: auth.py  birthday.py  contacts.py  schemas.py  search.py
storage/: backupdb.db  config.ini  db.py  models.py  seed.py
