[tool.poetry]
name = "m-02-12"
version = "0.1.0"
description = ""
authors = ["Andrew <sideroalogo8@gmail.com>"]
readme = "README.md"
packages = [{include = "m_02_12"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
faker = "^19.3.1"
pydantic-extra-types = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.103.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
